--- a/src/styles/core/_footer.scss
+++ b/src/styles/core/_footer.scss
@@ -84,26 +84,26 @@
     }
   }
 
-  // .facebook-icon {
-  //   @include icon($facebook, 40px, 40px);
-  //   background-size: 100%;
-  // }
+  .facebook-icon {
+    @include icon($facebook, 40px, 40px);
+    background-size: 100%;
+  }
 
-  // .instagram-icon {
-  //   @include icon($instagram, 40px, 40px);
-  //   background-size: 100%;
-  //   border-radius: 50%;
-  // }
+  .instagram-icon {
+    @include icon($instagram, 40px, 40px);
+    background-size: 100%;
+    border-radius: 50%;
+  }
 
-  // .pinterest-icon {
-  //   @include icon($pinterest, 40px, 40px);
-  //   background-size: 100%;
-  // }
+  .pinterest-icon {
+    @include icon($pinterest, 40px, 40px);
+    background-size: 100%;
+  }
 
-  // .twitter-icon {
-  //   @include icon($twitter, 40px, 40px);
-  //   background-size: 100%;
-  // }
+  .twitter-icon {
+    @include icon($twitter, 40px, 40px);
+    background-size: 100%;
+  }
 }
 
 /*
